--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.name-project-item {
+.project-name {
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
