--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body {
   background-color: var(--white-color);
 }
 
-.team-container {
+.team {
   background-color: var(--section-bg);
 }
 /* ? maine */
