--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,12 @@ body {
 }
 
 .menu-list-item-link {
+  font-weight: 500;
   color: var(--title-color);
 }
 
 .top-contacts-item-link {
+  font-weight: 500;
   color: var(--text-color);
 }
 
@@ -86,6 +88,7 @@ body {
 /* ? maine */
 .home-button,
 .filters-button {
+  color: #FFFFFF;
   cursor: pointer;
 }
 
