--- a/css/styles.css
+++ b/css/styles.css
@@ -35,10 +35,24 @@ a {
 
 body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
-  font-style: normal;
-  color: var(--title-color);
+  font-size: 14px;
+  line-height: 1.7;
+  margin: 0;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
 }
-
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.title {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  color: var(--title-color);
+  margin-bottom: 50px;
+}
 .menu-list-item-link {
   font-weight: 500;
   color: var(--title-color);
@@ -50,10 +64,12 @@ body {
 }
 
 .header {
+  letter-spacing: 0.02em;
   background-color: var(--white-color);
 }
 
 .home {
+  letter-spacing: 0.06em;
   color: var(--white-color);
   background-color: var(--footer-bg);
 }
@@ -154,9 +170,6 @@ body {
   line-height: 1.192;
   letter-spacing: 0.03em;
 }
-
-
-
 .home-title {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -165,7 +178,6 @@ body {
   line-height: 1.363;
   letter-spacing: 0.06em;
 }
-
 .home-button {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -174,21 +186,22 @@ body {
   line-height: 1.875;
   letter-spacing: 0.06em;
 }
-
 .features-subtitle {
   font-weight: bold;
   font-size: 14px;
   line-height: 2.142;
   letter-spacing: 0.03em;
+  color: var(--title-color);
 }
-
-.features-text,
 .address {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
-
+h3 {
+  color: var(--title-color);
+}
 .we-doing-subtitle,
 .team-subtitle {
   font-weight: bold;
