--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,10 @@ h3 {
 /* ? fonts */
 
 .filters-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1,625;
+  color: var(--title-color);
   background-color: var(--section-bg);
   border: none;
   border-radius: 4px;
